<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/enterDeviceId"
            android:textColor="@android:color/white"
            android:textSize="60dp" />

        <EditText
            android:id="@+id/pointName"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/name" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/pointDesc"
            android:layout_width="500dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="Device ID"
            android:longClickable="false"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Send"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonbackground"
            android:text="@string/sendEmail"
            android:textColor="@android:color/white"
            android:textSize="50dp" />
    </LinearLayout>

</ScrollView>